data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_822.wast
;; 3. **Invalid Loop Exit Via br_if**:    - Design a test where a loop contains a `br_if` that conditionally exits the loop based on a variable not manipulated within the loop.    - **Constraint**: The context must ensure the variable used in `br_if` is defined correctly.    - **CFG Check**: Confirm that the CFG logically represents the conditional path out of the loop.

(assert_invalid
  (module (func $invalid_br_if_outside_var (result i32)
    (local i32)
    (i32.const 0)
    (loop $L1 (result i32)
      (br_if $L1 (local.get 0))
    )
  ))
  "undefined variable in br_if"
)